Revert nescessary fields